objects/VIP_Purina_Account__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds the Account Id to associate Contacts that are being created for users (Hosts) in order to associate the Host (User) to a campaignMember.</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Animal_Type_Values__c</fullName>
        <description>Exclude this animal type from calculating points and tons.</description>
        <inlineHelpText>Animal types to exclude from calculating of annual points.</inlineHelpText>
        <label>Bad Animal Type Values</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bad_Opportunity_Record_Types__c</fullName>
        <description>Record types to excluded when calculating annual points and tons.
Use the developer Name  
EX: Record Type label : General Opportunity  DeveloperName = General_Opportunity
Separate fields with commas.</description>
        <inlineHelpText>Opportunity Record types to excluded when calculating annual points and tons.</inlineHelpText>
        <label>Bad Opportunity Record Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Influencer_Type__c</fullName>
        <description>List (CSV) of contact types to treat as influencer.  Any contact type in this list will be treated and taken down the influencer Farm VIP path.</description>
        <inlineHelpText>List of contact types to take the &quot;Influencer Path&quot;.</inlineHelpText>
        <label>Contact Influencer Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_ID__c</fullName>
        <description>The user id that will own the contacts being created when a host is attending an event.  NEEDS to be SYSTEM ADMINISTRATOR for visibility.</description>
        <label>Contact Owner ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <description>Holds the Purina Sales Specialist Record Id for the contact.</description>
        <label>Contact Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>VIP Purina Account</label>
</CustomObject>